[package]
name = "mcbotface"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
job_scheduler = "1"
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
